Fix scrollbar visibility issue in global CSS

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -82,7 +82,7 @@
 
 .slide-right {
   animation: slide-right 0.1s ease-in-out forwards;
-} 
+}
 
 @keyframes backdrop-animation {
   0% {
@@ -112,6 +112,19 @@
 
 /* For IE, Edge and Firefox */
 .scrollbar-hide {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+@media (max-width: 768px) {
+  *::-webkit-scrollbar {
+    display: none;
+  }
+
+  * {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
